<package format="3">
    <name>hiwonder_ros2</name>
    <version>0.0.1</version>
    <description>ROS 2 package for Hiwonder serial bus servo control</description>
    <maintainer email="pedrosr711@gmail.com">Pedro Rocha</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>actuator_msgs</depend>

    <!-- for custom services -->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>